redactable/tests/ui/phase01_user_phantom_data_no_traversal.stderr
error[E0599]: the method `redact` exists for struct `Envelope<String>`, but its trait bounds were not satisfied
  --> tests/ui/phase01_user_phantom_data_no_traversal.rs:14:6
   |
 3 |   struct PhantomData<T>(T);
   |   --------------------- doesn't satisfy `_: RedactableWithMapper`
...
 6 |   struct Envelope<T> {
   |   ------------------ method `redact` not found for this struct because it doesn't satisfy `Envelope<String>: Redactable`
...
11 |       let _ = Envelope {
   |  _____________-
12 | |         marker: PhantomData(String::from("phase01-canary")),
13 | |     }
14 | |     .redact();
   | |     -^^^^^^ method cannot be called on `Envelope<String>` due to unsatisfied trait bounds
   | |_____|
   |
   |
note: trait bound `PhantomData<String>: redactable::RedactableWithMapper` was not satisfied
  --> tests/ui/phase01_user_phantom_data_no_traversal.rs:5:10
   |
 5 | #[derive(Sensitive)]
   |          ^^^^^^^^^ type parameter would need to implement `Redactable`
note: the trait `redactable::RedactableWithMapper` must be implemented
  --> src/redaction/traits.rs
   |
   | pub trait RedactableWithMapper: Sized {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: consider manually implementing the trait to avoid undesired bounds
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following traits define an item `redact`, perhaps you need to implement one of them:
           candidate #1: `Redactable`
           candidate #2: `redactable::ScalarRedaction`
   = note: this error originates in the derive macro `Sensitive` (in Nightly builds, run with -Z macro-backtrace for more info)
